--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <h1> Talkin' C^*p </h1>
 
 <div class="buttons">
-	<button class="button"><span>Joke</span></button>
-	<button class="button"><span>Quote</span></buttom>
-	<button class="button"><span>Sentence</span></button>
+	<button class="button button-1"><span>Joke</span></button>
+	<button class="button button-2"><span>Quote</span></buttom>
+	<button class="button button-3"><span>Sentence</span></button>
 </div>
 
 
